# Zhele-template

./: CMakeLists.txt  README.md
cmake/: FindCMSIS.cmake
cmake/stm32/: utilities.cmake
src/: main.cpp
